wp-content/themes/tnn/style.css
/* ... */
#copy-right {
    background: url(img/copy-bg.png) no-repeat center top;
    color: #71903a;
    padding: 25px 0;
    /*background-size:100%;*/
    margin-top: 15px;
}
.loc-ico {
    display: inline-block;
    width: 14px;
    height: 15px;
    margin-right: 7px;
    margin-bottom: -5px;
    background: url(img/sprite.png) -111px 0px;
}
.tel-ico {
    display: inline-block;
    width: 17px;
    height: 12px;
    margin-right: 7px;
    background: url(img/sprite.png) -127px -2px;
}
.msg-ico {
    display: inline-block;
    width: 17px;
    height: 12px;
    margin-right: 7px;
    background: url(img/sprite.png) -146px -2px;
}
.msg-ico_ {
    display: inline-block;
    width: 17px;
    height: 12px;
    margin-right: 7px;
    background: url(img/sprite.png) -264px -2px;
}
#map-holder {
    position: relative;
}
#map-holder-inner {
    margin: 14px 10px 0 9px;
    position: absolute;
    z-index: 10;
}
.frame {
    position: absolute;
    z-index: 100;
}
.footer-social {
    position: absolute;
    /*z-index:-1;*/
    right: 5px;
    top: 25px;
    width: 54px;
}
#footer .footer-social-ico {
    display: block;
    width: 54px;
    height: 54px;
}
#footer .footer-social-ico:hover {
    margin-left: -10px;
}
#footer .footer-fb-ico {
    background: url(img/sprite.png) 0 -39px;
}
#footer .footer-twitter-ico {
    background: url(img/sprite.png) 0 -93px;
}
#footer .footer-instagram-ico {
    background: url(img/sprite.png) 0 -147px;
}
.shadow img {
    width: 100%;
}
.tabs.vertical, .tabs-vertical {
    float: left;
}
#social-holder {
    margin: 30px 0;
}
.social-ico {
    width: 24px;
    height: 24px;
    display: block;
}
#social-holder .tabs dd.active a, #social-holder .tabs dd a, #social-holder .tabs dd a:hover {
    background: none;
    padding: 25px 0;
}
.tabs dd.active span.fb-ico {
    background: url(img/sprite.png) -168px 0;
    padding: 0;
}
.tabs > dd.fb-ico-holder {
    background: #59709d;
    /*padding: 25px 0;*/
    -webkit-border-top-right-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;
    -moz-border-radius-topright: 8px;
    -moz-border-radius-bottomright: 8px;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
}
.tabs > dd.twitter-ico-holder {
    background: #3cb9eb;
    -webkit-border-top-right-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;
    -moz-border-radius-topright: 8px;
    -moz-border-radius-bottomright: 8px;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
}
.tabs > dd.youtube-ico-holder {
    background: #dadada;
    -webkit-border-top-right-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;
    -moz-border-radius-topright: 8px;
    -moz-border-radius-bottomright: 8px;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
}
.tabs dd.active span.twitter-ico {
    background: url(img/sprite.png) -199px 0;
    padding: 0;
}
.tabs dd.active span.youtube-ico {
    background: url(img/sprite.png) -232px 0;
    padding: 0;
}
.tabs dd span.fb-ico {
    background: #59709d url(img/sprite.png) -168px 0;
    padding: 0;
}
.tabs dd span.twitter-ico {
    background: #3cb9eb url(img/sprite.png) -199px 0;
    padding: 0;
}
.tabs dd span.youtube-ico {
    background: #dadada url(img/sprite.png) -232px 0;
    padding: 0;
}
#panel1a {
    border-right: #59709d 5px solid;
    min-height: 250px;
    background: #ffffff;
}
#panel2a {
    border-right: #3cb9eb 5px solid;
    min-height: 250px;
    background: #ffffff;
}
#panel3a {
    border-right: #dadada 5px solid;
    min-height: 250px;
    background: #ffffff;
}
#social-holder .tabs.vertical {
    width: 10%;
}
#social-holder .tabs-content.vertical {
    width: 90%;
}
.book-now {
	width: 139px;
	height: 31px;
	background: url(img/book-now-bg.png) no-repeat;
	text-transform: uppercase;
	color: #dfdad7;
	font-size: 18px;
	padding: 4px 15px;
	font-weight: bold;
	display: inline-block;
	border:none;
}
.book-now:hover {
    color: #fff;
}
#photos-thumbs .th {
    margin-right: 10px;
    margin-left: 10px;
}
.toggle-top-menu {
    display: none;
}
.gallery-holder{
    position:relative;
    margin:40px 0;
    }
.gallery-holder div > img{
    margin:6px 0% 8px 3%;
    width:92%;
    height:auto;
    }
.gallery-main-holder{
    width:100%;
    }
.gallery-frame{
    z-index:100;
    position:absolute;
    width:100%;
    top:-14px;
    left:1px;
    }
.gallery-frame a > img{
    width:100%;
    }
table.fullcalendar{
    width:100%;
    background:none;
}
table.fullcalendar thead, 
table.fullcalendar tr{
    background:none;
}

#slider div{
    overflow:hidden;
    }
#slider > div.slider-inner{
    /*background:url(img/banner-bg.png) no-repeat;*/
    overflow:hidden;
    margin-bottom:15px;
    background-size:100%;
    padding-left:6%;
    padding-right:6%;
    position:relative;
    }
.Slider-overlay{
    position:absolute;
    z-index:100;
    top:5px;
    left:0px;
    text-align:center
}
.Slider-overlay img{
	width:94%;
}
.main-slide-img{
    padding:24px 0 25px 0;
    }
.fotorama__nav-wrap{
    margin-top:25px;
}
.fotorama__active > .fotorama__thumb{
    border:none;
}
.slider-txt{
    background:url(img/caption-bg.png);
    text-align:right;
    heigt:100%;
}
.slider-txt-wrap, .slider-txt-wrap div, .fotorama__html > div {
    height:100%;
}
/*.slider-txt-wrap{
background:url('img/banner-overlay.png') 0px -8px no-repeat;
background-size:100%;
padding:10px 0;
}*/
img.fotorama__img{
width:96%;
margin-left:4%;
}
.slider-txt h1,.slider-txt h4{
    font-size:24px;
    color:#552a01;
    font-weight:bold;
    text-transform:uppercase;
    line-height:26px;
    font-family:Helvetica, san-serif;
}
.slider-txt h2{
    font-size:44px;
    color:#4f5c3e;
    font-weight:500;
    text-transform:uppercase;
    line-height:54px;
    font-family:Helvetica, san-serif;
}
.slider-txt h3{
    font-size:40px;
    color:#71903a;
    font-weight:500;
    text-transform:uppercase;
    line-height:50px;
    font-family:Helvetica, san-serif;
}
/* ... */

